# LaTeX-numbers

./: LICENSE  LaTeX-numbers.cabal  Main.hs  README.md  dict.txt  doctests.hs  left_tildes.txt  math_dict.txt  mid_tildes.txt  right_tildes.txt
.circleci/: config.yml
app/: Main.hs
src/LaTeX/: Demarkation.hs  Entry.hs  Executor.hs  Load.hs  Options.hs  Types.hs  Utils.hs
src/LaTeX/Replacement/: Procedures.hs  Rules.hs
