name:                LaTeX-numbers
version:             0.1.0.0
synopsis:            Tool to fix numbers syntax in LaTeX files
homepage:            https://github.com/viviag/LaTeX-numbers
license:             MIT
license-file:        LICENSE
author:              Vitalii Guzeev
maintainer:          viviag@yandex.ru
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LaTeX.Demarkation
                     , LaTeX.Types
                     , LaTeX.Replacement.Rules
                     , LaTeX.Replacement.Procedures
  hs-source-dirs:      src
  build-depends:       base >=4.8
                     , text >=1.2
                     , text-regex-replace
                     , text-icu
                     , split
  default-language:    Haskell2010

executable LaTeX-numbers
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-extensions:    RecordWildCards
                     , OverloadedStrings
  build-depends:       LaTeX-numbers
                     , base >=4.8
                     , text >=1.2
                     , turtle
                     , system-filepath
                     , foldl
                     , text-icu
  default-language:    Haskell2010
