name:                LaTeX-numbers
version:             0.1.0.0
synopsis:            Tool to fix numbers syntax in LaTeX files
homepage:            https://github.com/viviag/LaTeX-numbers
license:             MIT
license-file:        LICENSE
author:              Vitalii Guzeev
maintainer:          viviag@yandex.ru
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LaTeX.Demarkation
                     , LaTeX.Executor
                     , LaTeX.Types
                     , LaTeX.Replacement.Rules
                     , LaTeX.Replacement.Procedures
  hs-source-dirs:      src
  build-depends:       base >=4.12
                     , text >=1.2
                     , pcre-heavy
                     , split
                     , string-conversions
  default-language:    Haskell2010

executable LaTeX-numbers
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       LaTeX-numbers
                     , base >=4.12
                     , text >=1.2
                     , turtle
                     , system-filepath
                     , foldl
                     , pcre-heavy
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctests.hs
  default-extensions:  RecordWildCards
                     , OverloadedStrings
  build-depends:       base
                     , doctest >= 0.8
  default-language:    Haskell2010

